<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DetailsActivity"
    tools:showIn="@layout/activity_details">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/errorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/error"/>
        <LinearLayout
            android:id="@+id/licensePlateLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_plate"/>
            <TextView
                android:id="@+id/licensePlateLabelDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fineTypeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>
            <TextView
                android:id="@+id/typeLabelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dateTimeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"/>
                <TextView
                    android:id="@+id/dateLabelDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at"/>
                <TextView
                    android:id="@+id/timeLabelDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/creatorLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_by"/>
            <TextView
                android:id="@+id/firstNameLabelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/secondLabelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"/>
            <TextView
                android:id="@+id/locationLabelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/noteLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteLabel"/>
            <TextView
                android:id="@+id/noteLabelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/evidenceLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:id="@+id/evidenceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evidence"
                android:textColor="@android:color/black"
                android:textSize="20dp"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal|center"
                android:background="@drawable/ic_camera_car"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>