<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.EditDetailsActivity"
    tools:showIn="@layout/activity_edit_details">
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/errorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/error"/>
        <LinearLayout
            android:id="@+id/licensePlateLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/licensePlateInput"
                android:hint="@string/license_plate"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_camera"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fineTypeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fineTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>
            <Spinner
                android:id="@+id/fineTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:backgroundTint="@color/white"
                android:entries="@array/fineTypes"
                android:spinnerMode="dropdown" />
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dateTimeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"/>
                <EditText
                    android:id="@+id/dateInput"
                    android:inputType="date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at"/>
                <EditText
                    android:id="@+id/timeInput"
                    android:hint="00:00"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/creatorLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_by"/>
            <TextView
                android:id="@+id/firstNameLabelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/secondLabelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"/>
            <EditText
                android:id="@+id/locationInput"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/noteInput"
            android:hint="@string/note"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>
        <LinearLayout
            android:id="@+id/evidenceLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:id="@+id/evidenceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evidence"
                android:textColor="@android:color/black"
                android:textSize="20dp"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal|center"
                android:background="@drawable/ic_camera_car"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>